trunk/Code/src/crisp/evaluation/lamaplanparser/LamaPlanParser.jj
options {
	LOOKAHEAD = 2;
	STATIC = false;
    JDK_VERSION = "1.5";
}



PARSER_BEGIN(LamaPlanParser)
package crisp.evaluation.lamaplanparser;

import de.saar.chorus.term.Term;
import de.saar.chorus.term.Compound;
import de.saar.chorus.term.Constant;

import java.io.Reader;
import java.io.StringReader;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;

/**
 * A parser for reading a plan that is output by the LAMA lanner and returning
 * it as a list of Atoms representing action instances.  
 */
 public class LamaPlanParser {	
		
	private String normalize(String s) {		
			return s.toLowerCase();		
	}
	
    public static List<Term> parse(String string, Map<String,String> normalizer) {
        try {
            LamaPlanParser p = new LamaPlanParser(new StringReader(string));
            return p.plan();
        } catch(ParseException e) {
            System.err.println("Exception while parsing " + string + ": " + e);
            return null;
        }
    }
}
PARSER_END(LamaPlanParser)




SKIP : { " " | ")" | "\r" | "\t" | "\n" }

TOKEN : {	    
   <IDENTIFIER: ["a"-"z", "A"-"Z", "*"] (["a"-"z", "A"-"Z", "_", "0"-"9", "-", "*"])*>

}

List<Term> plan() :
{
	List<Term> ret = new ArrayList<Term>();
	Term atom;
}
{
	("(" atom=planstep() { ret.add(atom); })* {
		return ret;
	}
}


Compound planstep() :
{
	List<Term> arguments = new ArrayList<Term>();
    Token predicate, arg;
}
{
	predicate=<IDENTIFIER> (arg=<IDENTIFIER> { arguments.add(new Constant(normalize(arg.image))); })* {
		return new Compound(normalize(predicate.image), arguments);
	}
}
